Adds some changes to html-code

--- a/source/form.html
+++ b/source/form.html
@@ -55,13 +55,13 @@
           </button>
           <ul class="site-menu">
             <li class="site-menu__item">
-              <a class="site-menu__link site-menu__link--current" href="index.html">Главнвя</a>
+              <a class="site-menu__link" href="index.html">Главнвя</a>
             </li>
             <li class="site-menu__item">
               <a class="site-menu__link" href="gallery.html">Фото и видео</a>
             </li>
             <li class="site-menu__item">
-              <a class="site-menu__link" href="form.html">Форма отзыва</a>
+              <a class="site-menu__link site-menu__link--current" href="form.html">Форма отзыва</a>
             </li>
             <li class="site-menu__item">
               <a class="site-menu__link" href="https://htmlacademy.ru" target="_blank">HTML Academy</a>
