--- a/source/gallery.html
+++ b/source/gallery.html
@@ -55,10 +55,10 @@
           </button>
           <ul class="site-menu">
             <li class="site-menu__item">
-              <a class="site-menu__link site-menu__link--current" href="index.html">Главнвя</a>
+              <a class="site-menu__link" href="index.html">Главнвя</a>
             </li>
             <li class="site-menu__item">
-              <a class="site-menu__link" href="gallery.html">Фото и видео</a>
+              <a class="site-menu__link site-menu__link--current" href="gallery.html">Фото и видео</a>
             </li>
             <li class="site-menu__item">
               <a class="site-menu__link" href="form.html">Форма отзыва</a>
